[WebSocket] Setting wrong value to binaryType should not raise exception https://bugs.webkit.org/show_bug.cgi?id=97999

Reviewed by Yuta Kitamura.

Source/WebCore:

Don't raise exception when binaryType is the wrong value.
Instead, show an error message to console.

No new tests. Updated existing test.

* Modules/websockets/WebSocket.cpp:
(WebCore::WebSocket::setBinaryType): See the description.
* Modules/websockets/WebSocket.h:
(WebSocket): Removed ExceptionCode argument of setBinaryType().
* Modules/websockets/WebSocket.idl:
Removed "setter raises(DOMException)" and "[TreatReturnedNullStringAs=Undefined]".
They are no longer needed.

LayoutTests:

Update binary-type.html.

* http/tests/websocket/tests/hybi/binary-type-expected.txt:
* http/tests/websocket/tests/hybi/binary-type.html:


Canonical link: https://commits.webkit.org/116021@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130019 268f45cc-cd09-0410-ab3c-d52691b4dbfc