Source/WebCore/Modules/websockets/WebSocket.cpp
@@ -404,7 +404,7 @@ String WebSocket::binaryType() const
     return String();
 }
 
-void WebSocket::setBinaryType(const String& binaryType, ExceptionCode& ec)
+void WebSocket::setBinaryType(const String& binaryType)
 {
     if (binaryType == "blob") {
         m_binaryType = BinaryTypeBlob;
@@ -414,8 +414,7 @@ void WebSocket::setBinaryType(const String& binaryType, ExceptionCode& ec)
         m_binaryType = BinaryTypeArrayBuffer;
         return;
     }
-    ec = SYNTAX_ERR;
-    return;
+    scriptExecutionContext()->addConsoleMessage(JSMessageSource, LogMessageType, ErrorMessageLevel, "'" + binaryType + "' is not a valid value for binaryType; binaryType remains unchanged.");
 }
 
 const AtomicString& WebSocket::interfaceName() const
